tests/baselines/reference/noAssertForUnparseableTypedefs.errors.txt
tests/cases/conformance/jsdoc/bug26693.js(1,21): error TS1110: Type expected.
tests/cases/conformance/jsdoc/bug26693.js(2,22): error TS2307: Cannot find module 'nope'.


==== tests/cases/conformance/jsdoc/bug26693.js (2 errors) ====
    /** @typedef {module:locale} hi */
                        ~
!!! error TS1110: Type expected.
    import { nope } from 'nope';
                         ~~~~~~
!!! error TS2307: Cannot find module 'nope'.
    